# ras_group8_arm_controller

./: CMakeLists.txt  CMakeLists.txt~  Untitled Document~  package.xml  package.xml~
config/: default.yaml  default.yaml~
include/ras_group8_arm_controller/: ArmController.hpp
launch/: ras_group8_arm_controller.launch
src/: ArmController.cpp  arm_controller_node.cpp
srv/: MoveArm.srv
test/: test_arm_controller.cpp
